unpackaged/main/default/objects/ffct__ClearDataState__c/ffct__ClearDataState__c.object-meta.xml
<CustomObject>
    <description>Lists the objects processed and status of the clear data process, including the user who ran it.</description>
    <label>Clear Data State</label>
    <nameField>
        <displayFormat>CDS-{0000}</displayFormat>
        <label>Clear Data State Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>ClearDataStates</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>