unpackaged/main/default/objects/ffct__ClearDataState__c/fields/ffct__DeletionOption__c.field-meta.xml
<CustomField>
    <fullName>ffct__DeletionOption__c</fullName>
    <label>Deletion Option</label>
    <length>100</length>
    <type>Text</type>
</CustomField>