unpackaged/main/default/objects/ffct__ClearDataState__c/fields/ffct__ErroredObjects__c.field-meta.xml
<CustomField>
    <fullName>ffct__ErroredObjects__c</fullName>
    <label>Errored Objects</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>