unpackaged/main/default/objects/ffct__ClearDataState__c/fields/ffct__ProcessedObjectsInfoJSON__c.field-meta.xml
<CustomField>
    <fullName>ffct__ProcessedObjectsInfoJSON__c</fullName>
    <label>Processed Objects Info JSON</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>