unpackaged/main/default/objects/ffct__ClearDataState__c/fields/ffct__Product__c.field-meta.xml
<CustomField>
    <fullName>ffct__Product__c</fullName>
    <label>Product</label>
    <length>50</length>
    <type>Text</type>
</CustomField>