unpackaged/main/default/objects/ffct__ClearDataState__c/fields/ffct__Status__c.field-meta.xml
<CustomField>
    <fullName>ffct__Status__c</fullName>
    <label>Status</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Started</fullName>
            </value>
            <value>
                <fullName>InProgress</fullName>
            </value>
            <value>
                <fullName>Completed</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>